--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         {
           "id": "crt-container",
           "title": "CRT Dev Tools",
-          "icon": "resources/heart.svg"
+          "icon": "resources/image2vector.svg"
         }
       ]
     },
